# sd2

./: .gitignore  CMakeLists.txt  build.bat  run_test.bat
lib/: sd2.lib
sd2/: CMakeLists.txt
sd2/include/util/: constants.h  geometric_datafile_loader.h  strings.h  types.h  util.h  wavefront_geometric_datafile_loader.h
sd2/src/: CMakeLists.txt
sd2/src/Debug/: lib_sd2.lib
sd2/src/util/: CMakeLists.txt  wavefront_geometric_datafile_loader.cc
sd2/src/util/Debug/: libsd2_util.lib
test/: CMakeLists.txt  main.cc  tests.h
